force-app/main/default/objects/Asset_Hand_Over_Line__c/Asset_Hand_Over_Line__c.object-meta.xml
<CustomObject>
    <label>Asset Hand Over Line</label>
    <nameField>
        <displayFormat>AHOL-{0000000}</displayFormat>
        <label>Asset Hand Over Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Hand Over Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>