force-app/main/default/objects/Asset_Hand_Over_Line__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset.</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Asset_Allocation_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>