force-app/main/default/objects/Asset_Hand_Over_Line__c/fields/Asset_Hand_Over__c.field-meta.xml
<CustomField>
    <fullName>Asset_Hand_Over__c</fullName>
    <label>Asset Hand Over</label>
    <referenceTo>Asset_Hand_Over__c</referenceTo>
    <relationshipLabel>Asset Hand Over Lines</relationshipLabel>
    <relationshipName>Asset_Hand_Over_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>