force-app/main/default/objects/Asset_Hand_Over_Line__c/fields/UniqueCombination__c.field-meta.xml
<CustomField>
    <fullName>UniqueCombination__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>BAO NK: No same Asset on one Asset Hand Over</description>
    <label>UniqueCombination</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>